# netbox-geo-foss

./: .bandit  .env.app.example  .env.cache.example  .env.db.example  .env.example  .env.logging.example  .env.queue.example  .env.security.example  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .yamllint.yml  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_INDEX.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CI_CD_PIPELINE.md  CI_WORKFLOW_DEBUG.md  CONFIGURATION_SYSTEM.md  CONTRIBUTING.md  DATABASE_DESIGN.md  DEPLOYMENT_PIPELINE.md  DESIGN_PATTERNS_AND_SOLUTIONS.md  DOCUMENTATION_ANALYSIS_REPORT.md  Dockerfile  GITHUB_ACTIONS_SECURITY_FIX.md  HOW_TO_RELEASE.md  Jenkinsfile  LICENSE  LINE_BY_LINE_VERIFICATION.md  LXC_QEMU_VM_COST_BENEFIT_ANALYSIS.md  Makefile  PHASE_3_DEPLOYMENT_GUIDE.md  PHASE_3_EXECUTION_CHECKLIST.md  PROJECT_SUMMARY.md  PROXMOX_INTEGRATION_SUMMARY.md  PYTHON_313_EXECUTIVE_SUMMARY.md  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/agents/: netbox-geo-agent.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  codeql.yml  release.yml  security-scan.yml
ansible/: ansible.cfg
ansible/inventories/dev/: hosts.yml
ansible/inventories/prod/: hosts.yml  lxc-hosts.yml  vm-hosts.yml
ansible/inventories/test/: hosts.yml
ansible/playbooks/: deploy-hybrid.yml  deploy-lxc.yml  deploy-production.yml  deploy-vm.yml  deploy.yml  rollback.yml
ansible/roles/: README.md
ansible/roles/lxc-container/defaults/: main.yml
ansible/roles/lxc-container/meta/: main.yml
ansible/roles/lxc-container/tasks/: main.yml
ansible/roles/proxmox-common/defaults/: main.yml
ansible/roles/proxmox-common/meta/: main.yml
ansible/roles/proxmox-common/tasks/: main.yml
ansible/roles/qemu-vm/defaults/: main.yml
ansible/roles/qemu-vm/meta/: main.yml
ansible/roles/qemu-vm/tasks/: main.yml
ansible/templates/: app.env.j2  docker-compose.yml.j2  lxc-app.service.j2
app/: __init__.py  settings.py  urls.py
app/core/: __init__.py  audit.py  models.py  rbac.py
app/core/cache/: __init__.py  memcached.py
app/core/db/: __init__.py  connection.py
app/core/queue/: __init__.py  rabbitmq.py
ci/: Dockerfile.ci  build.sh  deploy.sh  docker-compose.ci.yml  entrypoint.sh  lint.sh  test.sh
ci/scripts/: promote-to-release.sh  promote-to-test.sh
config/: __init__.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
docker/github-runner/: Dockerfile  entrypoint.sh
docker/pipeline-executor/: Dockerfile
docker/pipeline-executor/scripts/: entrypoint.sh
docs/: DEPLOYMENT.md  PROXMOX_INTEGRATION.md
environments/: .env.development.example  .env.production.example  .env.testing.example
environments/dev/: .env.example
nginx/conf.d/: default.conf
packer/: lxc-template.json
requirements/: base.txt  dev.txt  development.txt  production.txt  test.txt
scripts/: env-loader.sh  pre-commit.sh  start-dev.sh  start-prod.sh  start-test.sh
src/: __init__.py
src/api/: main.py
src/core/: config.py  database.py  logging.py
src/netbox_geo/: __init__.py
src/netbox_geo/api/: __init__.py
src/netbox_geo/cache/: __init__.py
src/netbox_geo/cli/: __init__.py  main.py
src/netbox_geo/core/: __init__.py  config.py  exceptions.py
src/netbox_geo/importers/: __init__.py
src/netbox_geo/models/: __init__.py
src/netbox_geo/netbox/: __init__.py  client.py  rate_limiter.py
src/utils/: health.py  version.py
tests/: __init__.py  conftest.py
tests/integration/: test_netbox_integration.py
tests/performance/: __init__.py  load-test.js
tests/unit/: test_config.py  test_core.py  test_core.py.disabled  test_exceptions.py  test_rate_limiter.py
