[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-geo-foss"
version = "1.0.0"
description = "Enterprise FOSS Geographic Data Integration for NetBox 4.2.9+"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [
    {name = "nullroute-commits"}
]
keywords = ["netbox", "geographic", "gis", "geonames", "osm", "network-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

dependencies = [
    "pynetbox==7.4.0",
    "requests==2.32.3",
    "pandas==2.2.3",
    "geopandas==1.0.1",
    "pydantic==2.10.3",
    "click==8.1.8",
    "rich==13.9.4",
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[project.urls]
Homepage = "https://github.com/nullroute-commits/netbox-geo-foss"
Documentation = "https://netbox-geo-foss.readthedocs.io"
Repository = "https://github.com/nullroute-commits/netbox-geo-foss"
Issues = "https://github.com/nullroute-commits/netbox-geo-foss/issues"

[project.scripts]
netbox-geo = "netbox_geo.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["netbox_geo*"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = "313"
known_first_party = ["netbox_geo"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=netbox_geo --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/netbox_geo"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["/tests"]